# aim_cmh

./: .gitignore  README.md
devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh
devel/include/turtlesim_cleaner/: MyCustom.h
devel/lib/pkgconfig/: turtlesim_cleaner.pc
devel/lib/python3/dist-packages/turtlesim_cleaner/msg/: _MyCustom.py  __init__.py
devel/lib/turtlesim_cleaner/: custom_publisher  custom_subscriber  pub_sub_node  robot_cleaner_node  simple_publisher  simple_subscriber
devel/share/common-lisp/ros/turtlesim_cleaner/msg/: MyCustom.lisp  _package.lisp  _package_MyCustom.lisp  turtlesim_cleaner-msg.asd
devel/share/gennodejs/ros/turtlesim_cleaner/msg/: MyCustom.js  _index.js
devel/share/roseus/ros/turtlesim_cleaner/: manifest.l
devel/share/roseus/ros/turtlesim_cleaner/msg/: MyCustom.l
devel/share/turtlesim_cleaner/cmake/: turtlesim_cleaner-msg-extras.cmake  turtlesim_cleaner-msg-paths.cmake  turtlesim_cleanerConfig.cmake
src/scripts/: BK.py  a.out  bfs.py  bk.cpp  dfs.py  rw.py  test.py
src/scripts/output/: bk
src/turtlesim_cleaner/: CMakeLists.txt  package.xml
src/turtlesim_cleaner/msg/: LineAndNear.msg  MyCustom.msg
src/turtlesim_cleaner/src/: Find_Line_Near.cpp  Plot.py  Select_Point.cpp  custom_pub.cpp  custom_sub.cpp  gps_tf.py  matplot_example  matplot_example.cpp  robot_cleaner.cpp  simple_publishier.cpp  simple_subscriber.cpp  sub_and_pub.cpp  sub_with_pub.cpp
